Cleanup.  Remove comments.  Remove sysouts.  Remove useless logging.  Make sure we use jdk17 idioms.   Fix Sonar issues.  Spotless.